Small changes to address warnings (especially deprecation)